    Core:
    * FIX: inventory check now honors settings for exit code
    * FIX: avoid exception nodes of cluster have different agent type
    * FIX: continue inventory, if one check does not support it

    Multisite:
    * Speed-O-Meter: now measure only service checks. Host checks
      are omitted, since they do not really matter and make the
      results less useful when using CMC.

    Checks & Agents:
    * diskstat: removed (ever incorrect) latency computation for Linux
    * statgrab_load: support predictive levels, add perf-o-meter
    * ucd_cpu_load: support predictive levels
    * hpux_cpu, blade_bx_load: support predictive levels, add perf-o-meter,
       make WATO-configable

    WATO:
    * You can now have site-specific global settings when using
      distributed WATO (available in the "Distributed Monitoring")
    * bulk inventory: display percentage in progress bar
    * FIX: correct display of number of hosts in bulk inventory

1.2.3i4:
    Core:
    * Create inventory check also for hosts without services, if they
          have *no* ping tag.

    WATO:
    * Bulk inventory: speed up by use of cache files and doing stuff in
          groups of e.g. 10 hosts at once
    * Multisite connection: new button for cloning a connection

    Checks & Agents:
    * Linux agent RPM: remove dependency to package "time". That package
         is just needed for the binary mk-job, which is useful but not
         neccessary.

    Multisite:
    * FIX: fix broken single-site setups due to new caching

1.2.3i3:
    Core:
    * FIX: fixed typo in core startup message "logging initial states"
    * FIX: livestatus table statehist: fixed rubbish entries whenever
           logfile instances got unloaded

    Livestatus:
    * FIX: check_mk snmp checks with a custom check interval no longer
           have an incorrect staleness value

    Notifications:
    * mkeventd: new notification plugin for forwarding notifications