@@ -93,10 +93,13 @@ def render_json(rows, view, group_painters, painters, num_columns, show_checkbox
             else:
                 html.write(",")
             tdclass, content = paint_painter(p[0], row)
-            content = str(content).replace("<br>","\n")
+            if type(content) == unicode:
+	        content = content.encode("utf-8")
+            else:
+                content = str(content)
+            content = content.replace("<br>","\n")
             stripped = html.strip_tags(content)
-            utf8 = stripped.encode("utf-8")
-            html.write(encode_string_json(utf8))
+            html.write(encode_string_json(content))
         html.write("]")
 
     html.write("\n]\n")
